--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "fantasy-lottery-2019",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://JonSchwarz23.github.io/fantasy-lottery-2019",
   "dependencies": {
+    "gh-pages": "^1.0.13",
+    "local-storage": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-modal": "^3.8.1"
+    "react-modal": "^3.8.1",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
